--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
           <input id="todo-input" placeholder="Type a task" />
           <button id="todo-button">LET'S DO IT</button>
         </div>
+
         <ol id="todo-list">
           <li>Walk the dog</li>
           <li>Go to the store</li>
         </ol>
+
         <form id="color-form">
           <input id="color-input" placeholder="Type a color!" />
           <button id="color-button">CHANGE THE COLOR</button>
         </form>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
